--- a/pipeline.yaml
+++ b/pipeline.yaml
@@ -56,7 +56,7 @@ Resources:
       ServiceRole: !GetAtt CodeBuildServiceRole.Arn
       Source:
         Type: GITHUB
-        Location: 'git@github.com:companyfactory/github-aws-cicd.git'
+        Location: 'https://github.com/companyfactory/github-aws-cicd.git'
         BuildSpec: buildspec.yml
         Auth:
           Type: OAUTH
