--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,4 +3,4 @@ version: 0.2
 phases:
   build:
     commands:
-      - echo Build started on `date` for NBP testing purpose
+      - echo Build started on `date`
