--- a/pipeline.yaml
+++ b/pipeline.yaml
@@ -57,7 +57,7 @@ Resources:
       Source:
         Type: GITHUB
         Location: 'https://github.com/companyfactory/github-aws-cicd.git'
-        BuildSpec: buildspec.yml
+        BuildSpec: buildspec.yaml
         Auth:
           Type: OAUTH
           Resource: !Ref CodeBuildSourceCredential
